feat: Add dots markers, lines-numbers and dots-numbers modes (v1.1.0)

--- a/projects/ngx-analog-clock/package.json
+++ b/projects/ngx-analog-clock/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@craftedcode-dev/ngx-analog-clock",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Customizable analog clocks for Angular • Free, lightweight & easy to use",
   "author": {
     "name": "craftedcode-dev",
@@ -8,19 +8,16 @@
   },
   "license": "MIT",
   "keywords": [
-    "angular",
-    "angular-component",
-    "clock",
-    "classic-clock",
-    "modern-clock",
-    "analog-clock",
-    "ngx-analog-clock",
-    "time",
-    "timezone",
-    "typescript",
-    "customizable",
-    "ui-component",
-    "ngx"
+     "angular",
+      "clock",
+      "analog-clock",
+      "time",
+      "timezone",
+      "world-clock",
+      "timer",
+      "countdown",
+      "customizable",
+      "ngx"
   ],
   "homepage": "https://github.com/craftedcode-dev/ngx-analog-clock#readme",
   "repository": {
